# robot_ufr_example_simple

./: CMakeLists.txt
iris_lama/: CMakeLists.txt
vri-base-pioneer-webots/: .pioneer3dx.wbproj
vri-base-pioneer-webots/src/: main.c
vri-base-pioneer/src/: main.cpp
vri-nav-simple/src/: main.c
vri-slam-lama/: CMakeLists.txt
vri-slam-lama/src/: main.cpp
vri-slam-simple/src/: main.cpp
